@startuml CLASSES_PARTICIPANTES_ADMISSIONS
title "Classes participantes — Gérer les admissions"

skinparam classAttributeIconSize 0

class Receptionniste <<actor>>

class AdmissionsPage <<boundary>> {
  - selectedPatientId : Long
  - admissionForm : AdmissionCreateRequest
  --
  + searchPatient() : void
  + submitAdmission() : void
  + submitTransfer(id) : void
  + submitDischarge(id) : void
}

class AdmissionBffController <<boundary>> {
  - careEntryClient : CareEntryClient
  --
  + create(request) : AdmissionResponse
  + getById(id) : AdmissionResponse
  + list(...) : Page~AdmissionResponse~
  + transfer(id, request) : AdmissionResponse
  + discharge(id, request) : AdmissionResponse
}

class AdmissionController <<boundary>> {
  - admissionService : AdmissionService
  --
  + create(request) : AdmissionResponse
  + getById(id) : AdmissionResponse
  + list(...) : Page~AdmissionResponse~
  + transfer(id, request) : AdmissionResponse
  + discharge(id, request) : AdmissionResponse
  + cancel(id) : AdmissionResponse
}

class AdmissionService <<control>> {
  - admissionRepository : AdmissionRepository
  - patientServiceClient : PatientServiceClient
  - catalogServiceClient : CatalogServiceClient
  - stayServiceClient : StayServiceClient
  --
  + admit(request, authHeader) : AdmissionResponse
  + transfer(id, request, authHeader) : AdmissionResponse
  + discharge(id, request, authHeader) : AdmissionResponse
}

class PatientServiceClient <<boundary>> {
  + getPatient(patientId, authHeader) : PatientSummary
}

class CatalogServiceClient <<boundary>> {
  + getService(serviceId, authHeader) : ServiceSummary
  + suggestBed(serviceName, authHeader) : BedSuggestion
}

class StayServiceClient <<boundary>> {
  + openStay(request, authHeader) : StaySummary
}

class Admission <<entity>> {
  - id : Long
  - patientId : Long
  - hospitalServiceId : Long
  - admittedAt : Instant
  - dischargedAt : Instant
  - status : AdmissionStatus
  - roomLabel : String
  - bedLabel : String
}

Receptionniste --> AdmissionsPage
AdmissionsPage --> AdmissionBffController
AdmissionBffController --> AdmissionController
AdmissionController --> AdmissionService

AdmissionService --> Admission
AdmissionService ..> PatientServiceClient
AdmissionService ..> CatalogServiceClient
AdmissionService ..> StayServiceClient

@enduml